# lawwu.github.io

./: .gitignore  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  AGENTS.html  AGENTS.md  CLAUDE.html  CLAUDE.md  Makefile  README.md  _config.yml  _quarto.yml  about.html  about.qmd  ai_resources.html  ai_resources.qmd  blog.html  blog.qmd  blog.xml  conferences.html  conferences.qmd  conferences.xml  custom.scss  index.html  index.qmd  index.xml  listing.ejs.html  listing.ejs.md  listings.json  projects.html  projects.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: claude-code.yml  publish.yml
.quarto/idx/: blog.qmd.json  index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/xref/: INDEX  e701b912
_posts/: 2016-02-15-review-of-hadley-wickham-s-r-master-developer-course.md
_site/: listings.json
conferences/: index.qmd
conferences/2023-08-07-kdd2023-day1/: index.html  index.qmd
conferences/2023-10-10-ai-engineer-summit/: index.html  index.qmd
conferences/2024-05-28-mllms-workshop3/: index.html  index.qmd
conferences/2024-08-14-john-street-1-marriage/: index.html  index.qmd
conferences/2024-08-14-john-street-2-husbands/: index.html  index.qmd
conferences/2024-08-14-john-street-3-wives/: index.html  index.qmd
docs/: ai_resources.html  blog.html  blog.xml  conferences.html  conferences.xml  index.html  listings.json  llm_resources.html  projects.html  search.json  sitemap.xml
js/: copy-markdown.js  github-stars.js  reading-progress.js  toc-highlight.js
posts/: _metadata.yml
(+182 files in other folders)
