[project]
name = "lawwu-blog"
version = "0.1.0"
description = "Lawrence Wu's personal blog built with Quarto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Tell setuptools this is not a Python package (prevents it from treating blog directories
# like posts/, js/, images/, conferences/ as Python modules)
[tool.setuptools]
py-modules = []
